--- a/index.html
+++ b/index.html
@@ -4,27 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/fontawesome/all.css" />
+    <link rel="stylesheet" href="css/all.css" />
     <link rel="stylesheet" href="css/main.css" />
     <title>Space Tourism - Home</title>
   </head>
   <body>
-    <header>
-      <div class="container">
-        <h1>Salmaaaaa</h1>
-      </div>
-    </header>
     <section id="home">
-      <p>Test Number 0 .................</p>
-      <p>Test Number 1 .................</p>
-      <p>Test Number 2 .................</p>
-      <p>Test Number 3 .................</p>
-      <p>Test Number 4 .................</p>
-      <p>Test Number 5 .................</p>
-      <p>Test Number 6 .................</p>
-      <p>Test Number 7 .................</p>
-      <p>Test Number 8 .................</p>
-      <p>Test Number 9 .................</p>
+      <nav>
+        <div class="logo">
+          <img src="imgs/logo.svg" alt="" />
+        </div>
+        <ul class="horzNav">
+          <li class="active"><a href="/">Home</a></li>
+          <li class="active"><a href="/destination.html">Destination</a></li>
+          <li><a href="/crew.html">Crew</a></li>
+          <li><a href="/technology.html">Technology</a></li>
+        </ul>
+        <div class="vertNav">
+          <i class="fa-solid fa-bars-staggered"></i>
+        </div>
+      </nav>
+      <div class="container">
+        <p>Test Number 0 .................</p>
+        <p>Test Number 1 .................</p>
+        <p>Test Number 2 .................</p>
+        <p>Test Number 3 .................</p>
+        <p>Test Number 4 .................</p>
+        <p>Test Number 5 .................</p>
+        <p>Test Number 6 .................</p>
+        <p>Test Number 7 .................</p>
+        <p>Test Number 8 .................</p>
+        <p>Test Number 9 .................</p>
+        <p>Test Number 0 .................</p>
+        <p>Test Number 1 .................</p>
+        <p>Test Number 2 .................</p>
+        <p>Test Number 3 .................</p>
+        <p>Test Number 4 .................</p>
+        <p>Test Number 5 .................</p>
+        <p>Test Number 6 .................</p>
+        <p>Test Number 7 .................</p>
+        <p>Test Number 8 .................</p>
+        <p>Test Number 9 .................</p>
+      </div>
     </section>
     <script src="js/main.js"></script>
   </body>
