Home finished with responsive

--- a/index.html
+++ b/index.html
@@ -16,35 +16,36 @@
         </div>
         <ul class="horzNav">
           <li class="active"><a href="/">Home</a></li>
-          <li class="active"><a href="/destination.html">Destination</a></li>
+          <li><a href="/destination.html">Destination</a></li>
           <li><a href="/crew.html">Crew</a></li>
           <li><a href="/technology.html">Technology</a></li>
         </ul>
-        <div class="vertNav">
-          <i class="fa-solid fa-bars-staggered"></i>
+        <div class="menuBtn">
+          <a href="#">
+            <i class="fa-solid fa-bars"></i>
+          </a>
         </div>
+        <ul class="vertNav">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/destination.html">Destination</a></li>
+          <li><a href="/crew.html">Crew</a></li>
+          <li><a href="/technology.html">Technology</a></li>
+        </ul>
       </nav>
       <div class="container">
-        <p>Test Number 0 .................</p>
-        <p>Test Number 1 .................</p>
-        <p>Test Number 2 .................</p>
-        <p>Test Number 3 .................</p>
-        <p>Test Number 4 .................</p>
-        <p>Test Number 5 .................</p>
-        <p>Test Number 6 .................</p>
-        <p>Test Number 7 .................</p>
-        <p>Test Number 8 .................</p>
-        <p>Test Number 9 .................</p>
-        <p>Test Number 0 .................</p>
-        <p>Test Number 1 .................</p>
-        <p>Test Number 2 .................</p>
-        <p>Test Number 3 .................</p>
-        <p>Test Number 4 .................</p>
-        <p>Test Number 5 .................</p>
-        <p>Test Number 6 .................</p>
-        <p>Test Number 7 .................</p>
-        <p>Test Number 8 .................</p>
-        <p>Test Number 9 .................</p>
+        <div class="text">
+          <h2>So, you want to travel to</h2>
+          <h1>Space</h1>
+          <p>
+            Let’s face it; if you want to go to space, you might as well
+            genuinely go to outer space and not hover kind of on the edge of it.
+            Well sit back, and relax because we’ll give you a truly out of this
+            world experience!
+          </p>
+        </div>
+        <div class="exploreBtn">
+          <a href="/destination.html">Explore</a>
+        </div>
       </div>
     </section>
     <script src="js/main.js"></script>
