destination page finished and crew  without slider

--- a/crew.html
+++ b/crew.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/all.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <title>Space Tourism - Destination</title>
+    <title>Space Tourism - Crew</title>
   </head>
   <body>
-    <section id="destination">
+    <section id="crew">
       <nav>
         <div class="logo">
           <img src="imgs/logo.svg" alt="" />
         </div>
         <ul class="horzNav">
           <li><a href="/">Home</a></li>
-          <li class="active"><a href="/destination.html">Destination</a></li>
-          <li><a href="/crew.html">Crew</a></li>
+          <li><a href="/destination.html">Destination</a></li>
+          <li class="active"><a href="/crew.html">Crew</a></li>
           <li><a href="/technology.html">Technology</a></li>
         </ul>
         <div class="menuBtn">
@@ -33,35 +33,32 @@
         </ul>
       </nav>
       <div class="container">
-        <h2><span>02 </span> Pick your destination</h2>
-        <div class="destContent">
-          <div class="image">
-            <img src="" alt="" />
-          </div>
+        <h2><span>03 </span> Meet your crew</h2>
+        <div class="crewContent">
           <div class="text">
-            <ul class="destUl">
-              <li id="moon">Moon</li>
-              <li id="mars">Mars</li>
-              <li id="europa">Europa</li>
-              <li id="titan">Titan</li>
-            </ul>
-            <h1 class="destName"></h1>
-            <p class="destDescription"></p>
-            <div class="destNums">
-              <div class="distance">
-                <h5>Avg. Distance</h5>
-                <h1></h1>
-              </div>
-              <div class="time">
-                <h5>Est. Travel Time</h5>
-                <h1></h1>
-              </div>
+            <div class="x">
+              <h2>Flight Engineer</h2>
+              <h1>Anousheh Ansari</h1>
+              <p>
+                Anousheh Ansari is an Iranian American engineer and co-founder
+                of Prodea Systems. Ansari was the fourth self-funded space
+                tourist, the first self-funded woman to fly to the ISS, and the
+                first Iranian in space.
+              </p>
             </div>
+            <ul class="bullets">
+              <li></li>
+              <li class="active"></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="image">
+            <img src="imgs/crew/image-anousheh-ansari.png" alt="" />
           </div>
         </div>
       </div>
     </section>
     <script src="js/main.js"></script>
-    <script src="js/destination.js"></script>
   </body>
 </html>
