Fixed destination page data fetch

--- a/crew.html
+++ b/crew.html
@@ -59,6 +59,7 @@
         </div>
       </div>
     </section>
+    <script src="js/crew.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
