--- a/destination.html
+++ b/destination.html
@@ -39,12 +39,7 @@
             <img src="" alt="" />
           </div>
           <div class="text">
-            <ul class="destUl">
-              <li id="moon">Moon</li>
-              <li id="mars">Mars</li>
-              <li id="europa">Europa</li>
-              <li id="titan">Titan</li>
-            </ul>
+            <ul class="destUl"></ul>
             <h1 class="destName"></h1>
             <p class="destDescription"></p>
             <div class="destNums">
@@ -62,6 +57,6 @@
       </div>
     </section>
     <script src="js/main.js"></script>
-    <script src="js/destination.js"></script>
+    <script src="js/dest.js"></script>
   </body>
 </html>
