--- a/crew.html
+++ b/crew.html
@@ -37,29 +37,19 @@
         <div class="crewContent">
           <div class="text">
             <div class="x">
-              <h2>Flight Engineer</h2>
-              <h1>Anousheh Ansari</h1>
-              <p>
-                Anousheh Ansari is an Iranian American engineer and co-founder
-                of Prodea Systems. Ansari was the fourth self-funded space
-                tourist, the first self-funded woman to fly to the ISS, and the
-                first Iranian in space.
-              </p>
+              <h2 class="memberRole"></h2>
+              <h1 class="memberName"></h1>
+              <p class="memberBio"></p>
             </div>
-            <ul class="bullets">
-              <li></li>
-              <li class="active"></li>
-              <li></li>
-              <li></li>
-            </ul>
+            <ul class="bullets"></ul>
           </div>
           <div class="image">
-            <img src="imgs/crew/image-anousheh-ansari.png" alt="" />
+            <img src="" alt="" />
           </div>
         </div>
       </div>
     </section>
-    <script src="js/crew.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/crew.js"></script>
   </body>
 </html>
