--- a/technology.html
+++ b/technology.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/all.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <title>Space Tourism - Crew</title>
+    <title>Space Tourism - Technology</title>
   </head>
   <body>
-    <section id="crew">
+    <section id="technology">
       <nav>
         <div class="logo">
           <a href="/">
@@ -19,8 +19,8 @@
         <ul class="horzNav">
           <li><a href="/">Home</a></li>
           <li><a href="/destination.html">Destination</a></li>
-          <li class="active"><a href="/crew.html">Crew</a></li>
-          <li><a href="/technology.html">Technology</a></li>
+          <li><a href="/crew.html">Crew</a></li>
+          <li class="active"><a href="/technology.html">Technology</a></li>
         </ul>
         <div class="menuBtn">
           <a>
@@ -30,28 +30,31 @@
         <ul class="vertNav">
           <li><a href="/">Home</a></li>
           <li><a href="/destination.html">Destination</a></li>
-          <li class="active"><a href="/crew.html">Crew</a></li>
-          <li><a href="/technology.html">Technology</a></li>
+          <li><a href="/crew.html">Crew</a></li>
+          <li class="active"><a href="/technology.html">Technology</a></li>
         </ul>
       </nav>
       <div class="container">
-        <h2><span>03 </span> Meet your crew</h2>
-        <div class="crewContent">
+        <h2><span>04 </span> Space Launch 101</h2>
+        <div class="techContent">
           <div class="text">
             <div class="x">
-              <h2 class="memberRole"></h2>
-              <h1 class="memberName"></h1>
-              <p class="memberBio"></p>
+              <ul class="pagination"></ul>
+              <div class="dataCont">
+                <h2>The Terminology..</h2>
+                <h1></h1>
+                <p></p>
+              </div>
             </div>
-            <ul class="bullets"></ul>
           </div>
-          <div class="image">
-            <img src="" alt="" />
+          <div class="images">
+            <img class="portrait" src="" />
+            <img class="landscape" src="" />
           </div>
         </div>
       </div>
     </section>
     <script src="js/main.js"></script>
-    <script src="js/crew.js"></script>
+    <script src="js/technology.js"></script>
   </body>
 </html>
