--- a/destination.html
+++ b/destination.html
@@ -12,7 +12,9 @@
     <section id="destination">
       <nav>
         <div class="logo">
-          <img src="imgs/logo.svg" alt="" />
+          <a href="/">
+            <img src="imgs/logo.svg" alt="logo" />
+          </a>
         </div>
         <ul class="horzNav">
           <li><a href="/">Home</a></li>
@@ -21,13 +23,13 @@
           <li><a href="/technology.html">Technology</a></li>
         </ul>
         <div class="menuBtn">
-          <a href="#">
+          <a>
             <i class="fa-solid fa-bars"></i>
           </a>
         </div>
         <ul class="vertNav">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/destination.html">Destination</a></li>
+          <li><a href="/">Home</a></li>
+          <li class="active"><a href="/destination.html">Destination</a></li>
           <li><a href="/crew.html">Crew</a></li>
           <li><a href="/technology.html">Technology</a></li>
         </ul>
