--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <section id="home">
       <nav>
         <div class="logo">
-          <img src="imgs/logo.svg" alt="" />
+          <a href="/">
+            <img src="imgs/logo.svg" alt="logo" />
+          </a>
         </div>
         <ul class="horzNav">
           <li class="active"><a href="/">Home</a></li>
@@ -21,7 +23,7 @@
           <li><a href="/technology.html">Technology</a></li>
         </ul>
         <div class="menuBtn">
-          <a href="#">
+          <a>
             <i class="fa-solid fa-bars"></i>
           </a>
         </div>
