navigation menu set active based on url

--- a/crew.html
+++ b/crew.html
@@ -19,7 +19,7 @@
         <ul class="horzNav">
           <li><a href="/">Home</a></li>
           <li><a href="/destination.html">Destination</a></li>
-          <li class="active"><a href="/crew.html">Crew</a></li>
+          <li><a href="/crew.html">Crew</a></li>
           <li><a href="/technology.html">Technology</a></li>
         </ul>
         <div class="menuBtn">
@@ -30,7 +30,7 @@
         <ul class="vertNav">
           <li><a href="/">Home</a></li>
           <li><a href="/destination.html">Destination</a></li>
-          <li class="active"><a href="/crew.html">Crew</a></li>
+          <li><a href="/crew.html">Crew</a></li>
           <li><a href="/technology.html">Technology</a></li>
         </ul>
       </nav>
