--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </a>
         </div>
         <ul class="horzNav">
-          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/destination.html">Destination</a></li>
           <li><a href="/crew.html">Crew</a></li>
           <li><a href="/technology.html">Technology</a></li>
@@ -28,7 +28,7 @@
           </a>
         </div>
         <ul class="vertNav">
-          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="/destination.html">Destination</a></li>
           <li><a href="/crew.html">Crew</a></li>
           <li><a href="/technology.html">Technology</a></li>
