--- a/destination.html
+++ b/destination.html
@@ -18,7 +18,7 @@
         </div>
         <ul class="horzNav">
           <li><a href="/">Home</a></li>
-          <li class="active"><a href="/destination.html">Destination</a></li>
+          <li><a href="/destination.html">Destination</a></li>
           <li><a href="/crew.html">Crew</a></li>
           <li><a href="/technology.html">Technology</a></li>
         </ul>
@@ -29,7 +29,7 @@
         </div>
         <ul class="vertNav">
           <li><a href="/">Home</a></li>
-          <li class="active"><a href="/destination.html">Destination</a></li>
+          <li><a href="/destination.html">Destination</a></li>
           <li><a href="/crew.html">Crew</a></li>
           <li><a href="/technology.html">Technology</a></li>
         </ul>
