--- a/technology.html
+++ b/technology.html
@@ -20,7 +20,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/destination.html">Destination</a></li>
           <li><a href="/crew.html">Crew</a></li>
-          <li class="active"><a href="/technology.html">Technology</a></li>
+          <li><a href="/technology.html">Technology</a></li>
         </ul>
         <div class="menuBtn">
           <a>
@@ -31,7 +31,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/destination.html">Destination</a></li>
           <li><a href="/crew.html">Crew</a></li>
-          <li class="active"><a href="/technology.html">Technology</a></li>
+          <li><a href="/technology.html">Technology</a></li>
         </ul>
       </nav>
       <div class="container">
