--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <section id="home">
       <nav>
         <div class="logo">
-          <a href="/">
+          <a href="index.html">
             <img src="imgs/logo.svg" alt="logo" />
           </a>
         </div>
         <ul class="horzNav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/destination.html">Destination</a></li>
-          <li><a href="/crew.html">Crew</a></li>
-          <li><a href="/technology.html">Technology</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="destination.html">Destination</a></li>
+          <li><a href="crew.html">Crew</a></li>
+          <li><a href="technology.html">Technology</a></li>
         </ul>
         <div class="menuBtn">
           <a>
@@ -28,10 +28,10 @@
           </a>
         </div>
         <ul class="vertNav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/destination.html">Destination</a></li>
-          <li><a href="/crew.html">Crew</a></li>
-          <li><a href="/technology.html">Technology</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="destination.html">Destination</a></li>
+          <li><a href="crew.html">Crew</a></li>
+          <li><a href="technology.html">Technology</a></li>
         </ul>
       </nav>
       <div class="container">
@@ -46,7 +46,7 @@
           </p>
         </div>
         <div class="exploreBtn">
-          <a href="/destination.html">Explore</a>
+          <a href="destination.html">Explore</a>
         </div>
       </div>
     </section>
